[gd_scene load_steps=3 format=3 uid="uid://bdjpqqud6hihq"]

[ext_resource type="Script" uid="uid://dedqs52y85q5i" path="res://Scenes/NPC/PopUp/AbilityPopUp.gd" id="1_vn2nx"]

[sub_resource type="LabelSettings" id="LabelSettings_3e1tc"]

[node name="AbilityPopUp" type="CanvasLayer"]
script = ExtResource("1_vn2nx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_3e1tc")
horizontal_alignment = 1
uppercase = true

[node name="AbilityName" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="AbilityIcon" type="TextureRect" parent="Control/VBoxContainer"]
layout_mode = 2
stretch_mode = 5

[node name="AbilityDesc" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5294118)
